--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-download-link": "^2.3.0",
+    "react-headroom": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.9.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
